@@ -23,6 +23,9 @@
      [ssh-add.c ssh-agent.c ssh-keygen.c ssh-keyscan.c ssh-keysign.c ssh.c]
      [sshconnect.c sshlogin.c sshpty.c uidswap.c]
      move #include <unistd.h> out of includes.h
+   - dtucker@cvs.openbsd.org 2006/07/17 12:02:24
+     [auth-options.c]
+     Use '\0' rather than 0 to terminates strings; ok djm@
 
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
@@ -4941,4 +4944,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4413 2006/07/24 04:01:23 djm Exp $
+$Id: ChangeLog,v 1.4414 2006/07/24 04:01:43 djm Exp $
